deployment/nginx-ingress/ratings-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ratings-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ratings
  template:
    metadata:
      labels:
        app: ratings
    spec:
      containers:
      - name: ratings
        image: gcr.io/neeraj-arena/ratings
        ports:
        - containerPort: 80

---
kind: Service
apiVersion: v1
metadata:
  name: ratings
spec:
  selector:
    app: ratings
  ports:
  - protocol: TCP
    port: 80
  type: ClusterIP
