deployment/nginx-ingress/ingress-deployment.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: neeraj-nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /movie-details
        backend:
          serviceName: movie-details
          servicePort: 80
